<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_metric_system_kilometers"
        android:layout_marginTop="24dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/toggleMetricSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_distance_km"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/maxDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_50" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_marginTop="24dp" />
</LinearLayout>
